# eKI

./: .env.example  .gitignore  .spectral.yaml  LICENSE  OLLAMA_INTEGRATION.md  QUICKSTART_OLLAMA.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TESTING_GUIDE.md  TEST_REPORT.md  alembic.ini  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  config.py  dependencies.py  main.py  rate_limiting.py
api/routers/: __init__.py  health.py  knowledge_base.py  security.py
config/kb_seed/: README.md
config/kb_seed/placeholders/: 01_stunt_sop.md  02_fire_sfx_safety.md  03_vehicle_action_guidelines.md  04_height_rigging_protocol.md  05_intimacy_coordination_checklist.md  06_psychological_briefing_procedure.md
config/kb_seed/real/: .gitkeep
config/prompts/: prompts.yaml
config/taxonomy/: measures.yaml  taxonomy.yaml
core/: db_models.py  exceptions.py  logging_config.py  models.py  prompt_sanitizer.py
db/: session.py
db/migrations/: env.py
db/migrations/versions/: 20260130_0912_b7ed8ab1d224_add_security_models_and_authorization.py  20260208_1158_m05_delivery_idempotency.py  20260324_1400_add_script_id_to_job_metadata.py  20260521_m06_knowledge_base.py
docker/: Dockerfile  Dockerfile.worker
docker/temporal/dynamicconfig/: eki.yaml
docs/: COVERAGE_REPORT.md  DEPLOYMENT_GUIDE.md  EPRO_INTEGRATION_GUIDE.md  LLM_INTEGRATION.md  M01_COMPLETION_REPORT.md  M06_ACCEPTANCE_EVIDENCE.md  M06_KB_GUIDE.md  M06_PROD_DEPLOY.md  M07_ACCEPTANCE_EVIDENCE.md  M08_ACCEPTANCE_EVIDENCE.md  OLLAMA_SETUP.md  SECURITY_AUDIT_2026-02-06.md
llm/: __init__.py  base.py  factory.py  local_mistral.py  mistral_cloud.py  ollama.py  prompt_manager.py
openapi/: eki-api-v0.1.yaml
parsers/: __init__.py  base.py  fdx.py  pdf.py  pdf_llm_structurer.py  pdf_scene_splitter.py  scene_heading.py  secure_xml.py
postman/: README.md  eKI-API-v0.1.postman_collection.json  eKI-API-v0.5.postman_collection.json  eKI-API-v0.6.postman_collection.json
scripts/: create_api_key.py  generate_secrets.py  seed_kb.py  test_llm.py
secrets/: .gitkeep  README.md
services/: knowledge_base.py  report_generator.py  secure_buffer.py  security_service.py  taxonomy.py
tests/: build_large_fixture.py  conftest.py  generate_pdf_fixtures.py  run_pdf_m07_benchmark.py  test_api.py  test_config.py  test_fdx_parser.py  test_kb_endpoints.py  test_kb_service.py  test_m08_buffer_lifecycle.py  test_m08_cleanup.py  test_m08_log_hygiene.py  test_m08_retry_window.py  test_m08_webhook.py  test_mistral_cloud_structured.py  test_ollama_provider.py  test_ollama_semaphore.py  test_pdf_parser.py  test_prompt_manager_fix.py  test_reports.py  test_risk_with_kb.py  test_security.py  test_seed_kb.py  test_taxonomy.py  test_workflow_concurrency.py  test_workflows.py
tests/fixtures/fdx/: empty_scenes.fdx  english_format.fdx  entity_bomb.fdx  german_format.fdx  large_script.fdx  malformed.fdx  multi_scene.fdx  no_scene_numbers.fdx  psychological.fdx  simple_scene.fdx  stunt_heavy.fdx  xxe_attack.fdx
tests/scripts/: run_tests.sh
worker/: main.py
workflows/: activities.py  security_check.py
